--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "cypress": "^9.1.1"
+  },
+  "devDependencies": {
+    "mochawesome": "^7.1.3"
   }
 }
